Fix: Word break and image overflow issue on template page

--- a/modules/template/resources/css/template-pages.css
+++ b/modules/template/resources/css/template-pages.css
@@ -6,3 +6,18 @@
 #templatePageRoot .download-item {
     margin-top:5px; 
 }
+
+#templatePageRoot {
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    -ms-word-break: break-all;
+    word-break: break-word;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+}
+
+#templatePageRoot img {
+    max-width: 100%;
+}
